rust/test/former/all/hashmap_without_parameter.stderr
error: Expects at least two parameters here:
         HashMap < i32 >
  --> ../../../rust/test/former/all/hashmap_without_parameter.rs:11:24
   |
11 |   pub string_slice_1 : HashMap< i32 >,
   |                        ^^^^^^^^^^^^^^
